--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.1.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
