--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.9.1",
+    "@mantine/core": "^7.9.1",
+    "@mantine/form": "^7.9.1",
+    "@mantine/hooks": "^7.9.1",
+    "@mantine/modals": "^7.9.1",
+    "@nextui-org/navbar": "^2.0.30",
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "embla-carousel-react": "^8.0.4",
     "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -30,6 +38,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
