--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sass": "^1.77.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
